tests/NormalTests/paczka1/fuzzy1/69940335.err
Error in line 3: HPkUs A854 10,7
Error in line 12: ZNiFAtUlqB S576 80,4
Error in line 33: ABnrW9 S206 92,9
Error in line 18: S576 S576 5,5
Error in line 40: S576 S576 714
